# AI-Security-Camera

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-pi.txt  requirements-yolo-export.txt  requirements.txt
deploy/systemd/: vision-appliance.env  vision-appliance.service
docs/: interview-guide.md  operations-runbook.md
scripts/: check_onnx_detector.py  export_yolo_onnx.py  install_pi.sh  laptop_camera_streamer.py  pi_health_check.sh  pi_safe_stop.sh
src/vision_appliance/: __init__.py  __main__.py  alerting.py  api.py  camera.py  config.py  database.py  event_generator.py  llm_summarizer.py  models.py  motion_detector.py  object_detector.py  object_labeler.py  object_tracker.py  pipeline.py  system_health.py  thermal_guard.py  video_recorder.py
src/vision_appliance/static/: app.js  index.html  styles.css
tests/: test_alerting.py  test_config.py  test_event_generator.py  test_object_labeler.py  test_retention.py  test_system_health.py  test_thermal_guard.py  test_video_recorder.py
